--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ActivityPrincipal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_rec"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:background="@drawable/ic_baseline_keyboard_voice_24"
+        tools:layout_editor_absoluteX="84dp"
+        tools:layout_editor_absoluteY="168dp" />
+
+    <Button
+        android:id="@+id/btn_play"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:background="@drawable/ic_baseline_play_circle_outline_24"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="254dp" />
+</LinearLayout>
