--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -211,6 +211,30 @@
                 tools:gravity="center_vertical" />
 
             <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Nombre"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/txt_nombre"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/editext"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="Nombre"
+                android:inputType="textPersonName"
+                android:paddingStart="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="#747474"
+                android:textSize="14sp"
+                tools:gravity="center_vertical" />
+
+            <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -235,7 +259,7 @@
                 android:textSize="14sp" />
 
             <Button
-                android:id="@+id/btn_guardar"
+                android:id="@+id/btn_actualizar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -245,7 +269,7 @@
                 android:textSize="14sp" />
 
             <Button
-                android:id="@+id/btn_lista"
+                android:id="@+id/btn_eliminar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
